--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 	</head>
 	<body>
+		hello
 		<script src="only-connect.js"></script>
 	</body>
 </html>
